harbor/templates/harbor-core-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: harbor-core
spec:
  hosts:
    - harbor-core
    - harbor-core.harbor.svc.cluster.local
  http:
    - match:
        - uri:
            prefix: '/v2/'
      route:
        - destination:
            host: harbor-registry
            port:
              number: 5000
    - route:
        - destination:
            host: harbor-core
