harbor/templates/harbor-virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: harbor
spec:
  gateways:
  - istio-system/http-gateway
  hosts:
    - harbor.soh.re
  http:
  - match:
    - port: 80
    route:
    - destination:
        host: harbor
        port:
          number: 80
